--- a/src/Mobile/LazyWelfare.AndroidCtrls/LazyWelfare.AndroidCtrls.csproj
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/LazyWelfare.AndroidCtrls.csproj
@@ -212,101 +212,106 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_aac.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_aac.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_bmp.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_bmp.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_gif.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_gif.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_jpg.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_jpg.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_mp3.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_mp3.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_none.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_none.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_ogg.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_ogg.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_png.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_png.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_psd.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_psd.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_swf.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_swf.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_tiff.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_tiff.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_txt.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_txt.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_wav.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_wav.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_wma.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_wma.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_wmv.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_wmv.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_wpd.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_wpd.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_wps.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_wps.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_xls.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_xls.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\selector_file_zip.png">
+    <AndroidResource Include="Resources\drawable-xxhdpi\file_zip.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\FileExpleror.axml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Scaner_ZxingOverlay.axml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
@@ -357,6 +362,23 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\Scaner_back.png">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\expleror_menu_black.png">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\FileExplerorItem.axml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\expleror_folder.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
