--- a/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
+++ b/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
@@ -67,9 +67,12 @@
     <Compile Include="Parcel\Parcelable.cs" />
     <Compile Include="Parcel\ParcelableCreator.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
+    <Compile Include="TryCatch.cs" />
+    <Compile Include="TryCatchException.cs" />
     <Compile Include="Views\AnimationListener.cs" />
     <Compile Include="Views\AnonymousOnClickListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IOnLongClickListener.cs" />
     <Compile Include="Views\ViewEvent.cs" />
     <Compile Include="Views\ItemClickListener.cs" />
   </ItemGroup>
