增加文件容量显示

--- a/src/Mobile/MicroBluer.AndroidUtils/MicroBluer.AndroidUtils.csproj
+++ b/src/Mobile/MicroBluer.AndroidUtils/MicroBluer.AndroidUtils.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Extension\ParcelExtension.cs" />
     <Compile Include="Extension\WeakReferenceExtension.cs" />
     <Compile Include="Graphics\Anonymous.cs" />
+    <Compile Include="IO\GetFileSizeUtil.cs" />
     <Compile Include="Parcel\Parcelable.cs" />
     <Compile Include="Parcel\ParcelableCreator.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
