--- a/src/Mobile/MicroBluer.AndroidMobile/Views/web.config
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/web.config
@@ -11,8 +11,8 @@
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=$mvcwebrazorhostfactoryversion$, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
-        <add namespace="LazyWelfare.AndroidMobile" />
-        <add namespace="LazyWelfare.AndroidMobile.Views.Partials" />
+        <add namespace="MicroBluer.AndroidMobile" />
+        <add namespace="MicroBluer.AndroidMobile.Views.Partials" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
