--- a/src/Mobile/MicroBluer.AndroidMobile/Properties/AndroidManifest.xml
+++ b/src/Mobile/MicroBluer.AndroidMobile/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="LazyWelfare.AndroidMobile.LazyWelfare.AndroidMobile" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="MicroBluer.AndroidMobile.MicroBluer.AndroidMobile" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="23" />
 	<application android:allowBackup="true" android:label="小蓝人" android:icon="@drawable/blue_face"></application>
 	<activity android:name=".MainActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden|screenSize" />
