--- a/src/Server/MicroBluer.ServerWeb/Properties/launchSettings.json
+++ b/src/Server/MicroBluer.ServerWeb/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "LazyWelfare.ServerWeb": {
+    "MicroBluer.ServerWeb": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
