--- a/src/Mobile/MicroBluer.AndroidMobile/MicroBluer.AndroidMobile.csproj
+++ b/src/Mobile/MicroBluer.AndroidMobile/MicroBluer.AndroidMobile.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Core\Views\Partials\FileHostsExplerorView.cs" />
     <Compile Include="Core\Views\Partials\FileHostsIndexView.cs" />
     <Compile Include="Core\Views\Partials\FolderMapEditView.cs" />
+    <Compile Include="Core\Views\Partials\FolderMapExplerorView.cs" />
     <Compile Include="Core\Views\Partials\FolderMapIndexView.cs" />
     <Compile Include="Core\Views\Partials\UserEditView.cs" />
     <Compile Include="Core\Views\Partials\UserIndexView.cs" />
@@ -168,6 +169,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FolderMapEditView.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Partials\FolderMapExplerorView.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FolderMapExplerorView.cshtml</DependentUpon>
     </Compile>
     <Compile Include="Views\Partials\FolderMapIndexView.cs">
       <AutoGen>True</AutoGen>
@@ -485,6 +491,12 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\base_edit_black.png">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views\Partials\FolderMapExplerorView.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>FolderMapExplerorView.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.4.0.1\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
