--- a/src/Mobile/MicroBluer.AndroidMobile/Views/web.config
+++ b/src/Mobile/MicroBluer.AndroidMobile/Views/web.config
@@ -12,6 +12,7 @@
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="MicroBluer.AndroidMobile" />
+        <add namespace="MicroBluer.AndroidMobile.Models" />
         <add namespace="MicroBluer.AndroidMobile.Views.Partials" />
       </namespaces>
     </pages>
