--- a/src/Server/MicroBluer.ServerWeb/MicroBluer.ServerWeb.csproj
+++ b/src/Server/MicroBluer.ServerWeb/MicroBluer.ServerWeb.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>42258478-4e2d-4b77-a028-7ff97f08f91c</UserSecretsId>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
