--- a/src/Server/MicroBluer.ServerHost/packages.config
+++ b/src/Server/MicroBluer.ServerHost/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net462" />
+  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net462" />
+  <package id="CefSharp.Common" version="63.0.3" targetFramework="net462" />
+  <package id="CefSharp.Wpf" version="63.0.3" targetFramework="net462" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Log4Net1215" version="3.4.1" targetFramework="net461" />
