--- a/src/Tests/UnitTest/UnitTest.csproj
+++ b/src/Tests/UnitTest/UnitTest.csproj
@@ -82,9 +82,9 @@
       <Project>{3EC1CD04-B7F3-4BDC-8800-7E0BD11C963C}</Project>
       <Name>MicroBluer.AndroidUtils</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Server\MicroBluer.ServerHost\MicroBluer.ServerHost.csproj">
+    <ProjectReference Include="..\..\Server\MicroBluer.ServerHost\MicroBluer.Windows.ServerHost.csproj">
       <Project>{b60b34e5-9496-46b1-8183-67d2bd42e305}</Project>
-      <Name>MicroBluer.ServerHost</Name>
+      <Name>MicroBluer.Windows.ServerHost</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
