--- a/src/Server/MicroBluer.ServerHost/MicroBluer.Windows.ServerHost.csproj
+++ b/src/Server/MicroBluer.ServerHost/MicroBluer.Windows.ServerHost.csproj
@@ -79,6 +79,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Logging, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Common.Logging.3.4.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
@@ -132,7 +135,10 @@
     <Compile Include="UI\Ctrls\BitmapRenderer.cs" />
     <Compile Include="UI\Ctrls\ImageCreate.cs" />
     <Compile Include="UI\Ctrls\NotificationAreaIcon.cs" />
+    <Compile Include="UI\Page.cs" />
     <Compile Include="UI\PageBase.cs" />
+    <Compile Include="UI\PageContainer.cs" />
+    <Compile Include="UI\PageRoute.cs" />
     <Compile Include="UI\Pages\LoadingPage.xaml.cs">
       <DependentUpon>LoadingPage.xaml</DependentUpon>
     </Compile>
@@ -146,7 +152,7 @@
     <Compile Include="Service\SettingCache.cs" />
     <Compile Include="Core\WindowsCommandDistributor.cs" />
     <Compile Include="UI\TopMenus.cs" />
-    <Page Include="MainWindow.xaml">
+    <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -156,7 +162,7 @@
     </Compile>
     <Compile Include="UI\Ctrls\PlaceholderTextBox.cs" />
     <Compile Include="UI\Ctrls\TitleTextBox.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
