--- a/src/Mobile/MicroBluer.AndroidCtrls/MicroBluer.AndroidCtrls.csproj
+++ b/src/Mobile/MicroBluer.AndroidCtrls/MicroBluer.AndroidCtrls.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CodeScan\ScanerActivity.cs" />
     <Compile Include="Core\FileExpler\ExplerAdapter.cs" />
     <Compile Include="Core\FileExpler\ExplerItemCollection.cs" />
     <Compile Include="Core\FileExpler\FileExpleror.cs" />
@@ -464,6 +465,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\anim\Sym_keyboard_slide_in_bottom.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Scaner_Result.axml">
+      <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
